cmake_minimum_required(VERSION 3.20)
project(quote_simu VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
option(BUILD_EXAMPLES "Build example programs" ON)

if(BUILD_EXAMPLES)
    find_package(nng CONFIG REQUIRED)
    add_executable(pub examples/pubsub/server.cpp)
    target_link_libraries(pub PRIVATE nng::nng)
    target_include_directories(pub PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
    add_executable(sub examples/pubsub/client.cpp)
    target_link_libraries(sub PRIVATE nng::nng)
    target_include_directories(sub PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
endif()